{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 25,
  "lineage": "ce569d09-3aa2-1e97-e320-9c3197a510f7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkInterfaces/nic-bastion",
            "internal_domain_name_suffix": "eve4l0xzqibuvgukg04lzsmikg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-bastion",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
                "subnet_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-bastion"
              }
            ],
            "location": "swedencentral",
            "name": "nic-bastion",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "tp-bastion-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip_bastion",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_bastion",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkInterfaces/nic-web",
            "internal_domain_name_suffix": "eve4l0xzqibuvgukg04lzsmikg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-web",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/publicIPAddresses/pip-web",
                "subnet_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-web"
              }
            ],
            "location": "swedencentral",
            "name": "nic-web",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "tp-bastion-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip_web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-bastion",
            "location": "swedencentral",
            "name": "nsg-bastion",
            "resource_group_name": "tp-bastion-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "82.64.163.127/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "swedencentral",
            "name": "nsg-web",
            "resource_group_name": "tp-bastion-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-from-bastion",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.119.220",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-bastion",
            "resource_group_name": "tp-bastion-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/publicIPAddresses/pip-web",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.229.121",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-web",
            "resource_group_name": "tp-bastion-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-bastion",
            "name": "subnet-bastion",
            "resource_group_name": "tp-bastion-rg",
            "virtual_network_name": "tp-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-web",
            "name": "subnet-web",
            "resource_group_name": "tp-bastion-rg",
            "virtual_network_name": "tp-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_bastion_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-bastion",
            "network_security_group_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-bastion",
            "subnet_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-bastion"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_bastion",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_bastion",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-web",
            "network_security_group_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "subnet_id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet_web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eae54925-82f9-4a03-9a8a-36bcbcc98856",
            "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet",
            "location": "swedencentral",
            "name": "tp-vnet",
            "resource_group_name": "tp-bastion-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-bastion",
                "name": "subnet-bastion",
                "security_group": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-bastion"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/virtualNetworks/tp-vnet/subnets/subnet-web",
                "name": "subnet-web",
                "security_group": "/subscriptions/886eb166-d41e-4dd4-9f89-7125bd7df134/resourceGroups/tp-bastion-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-web"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}